--- a/templates/mood-based-recommendation.html
+++ b/templates/mood-based-recommendation.html
@@ -1,7 +1,7 @@
 {% extends 'layouts/base.html' %}
 
 {% block page_title %}
-    Song mood  Detection
+    Mood Based Songs Recommendations
 {% endblock %}
 
 {% block body_block %}
