--- a/templates/song-recommendation.html
+++ b/templates/song-recommendation.html
@@ -1,7 +1,7 @@
 {% extends 'layouts/base.html' %}
 
 {% block page_title %}
-    Spam Ham Detection
+    Popularity Based Song Recommendations
 {% endblock %}
 
 {% block body_block %}
