faial emaotion based song recommendations

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -1577,3 +1577,13 @@ h3.quote::before {
   transform: scale(1.2);
 }
 
+
+.outer-shadow {
+  --outer-shadow: 3px 3px 3px #d0d0d0, -3px -3px 3px #f8f8f8;
+  box-shadow: var(--outer-shadow);
+}
+
+.inner-shadow {
+  --inner-shadow: inset 3px 3px 3px #d0d0d0, inset -3px -3px 3px #f8f8f8;
+  box-shadow: var(--inner-shadow);
+}
