--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@
     <div class="container-fluid home-pocs" >
         <div class="row d-flex justify-content-center mb-3">
             <div>
-                <h1 class="text-center">Infobeans POCs</h1>
+                <h1 class="text-center">Infobeans AI POCs</h1>
                 <div class="divider"></div>
             </div>
         </div>
