--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -1487,7 +1487,7 @@ h3.quote::before {
 .heading-align{
 
   text-align: center;
-  margin-bottom: 60px !important;
+  margin-bottom: 0px !important;
 }
 
 .card{
@@ -1586,4 +1586,18 @@ h3.quote::before {
 .inner-shadow {
   --inner-shadow: inset 3px 3px 3px #d0d0d0, inset -3px -3px 3px #f8f8f8;
   box-shadow: var(--inner-shadow);
+}
+
+
+.title-heading-justify{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 60px;
+}
+
+
+.title-heading-justify h2 {
+  font-size: 30px !important;
 }
