--- a/templates/emotion-based-song-recommendation.html
+++ b/templates/emotion-based-song-recommendation.html
@@ -8,10 +8,10 @@ Mood Based Songs Recommendations
 <section class="contact-form-wrap section">
     <div class="container-fluid">
         <div class="row p-5" id="body">
-            <div class="col-lg-12 col-md-12 col-sm-12">
-                <h2 class="mb-4 heading-align">InfoBeans : Mood Based Song recommendations
-
+            <div class="col-lg-12 col-md-12 col-sm-12 title-heading-justify">
+                <h2 class="mb-4 heading-align">InfoBeans : Mood Based Song
                 </h2>
+                <h2> Recommendations</h2>
             </div>
             <div class="col-lg-5 col-md-12 col-sm-12">
                 <h5 class="">Emotion Detector</h5>
