--- a/templates/layouts/header.html
+++ b/templates/layouts/header.html
@@ -2,7 +2,7 @@
 <!-- Header Start -->
 <header class="navigation">
 	<nav class="navbar navbar-expand-lg" id="navbar">
-		<div class="container">
+		<div class="container-fluid">
 		  <a class="navbar-brand" href="{{ url_for('home_page') }}">
             <!-- Investors<span> Chatbot</span> -->
             <img src="{{ url_for('static', filename='pictures/Logo.png') }}" alt="">
