--- a/templates/mood-based-recommendation.html
+++ b/templates/mood-based-recommendation.html
@@ -8,10 +8,10 @@
 <section class="contact-form-wrap section">
     <div class="container-fluid" >
         <div class="row p-5">
-            <div class="col-lg-12 col-md-12 col-sm-12">
-                <h2 class="mb-4 heading-align">InfoBeans :  Mood Based Song recommendations
-
+            <div class="col-lg-12 col-md-12 col-sm-12 title-heading-justify">
+                <h2 class="mb-4 heading-align">InfoBeans :  Facial Emotion Based 
                 </h2>
+                <h2>Song Recommendations</h2>
             </div>
 
             <div class="col-lg-5 col-md-12 col-sm-12">
