--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -3,7 +3,7 @@
   <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="megakit,business,company,agency,multipurpose,modern,bootstrap4">
   <meta name="author" content="infobeans.com">
   <title> {% block page_title %}INVESTORS CHATBOT{% endblock %} | Infobeans Technologies</title>
