--- a/templates/image-classification.html
+++ b/templates/image-classification.html
@@ -17,8 +17,8 @@ Classification {% endblock %} {% block body_block %}
           name="imgfile"
         />
         <small
-          >The model was trained with the images(approx 10,000 each) of Cars,
-          Cats and Dogs and the accuracy was accuracy: 0.8290
+          >The model was trained with the images(approx 10,000 each) of Cats and
+          Dogs and the accuracy was approx: 0.8290
         </small>
       </div>
       <button type="submit" class="btn btn-primary">Submit</button>
