--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -1601,3 +1601,29 @@ h3.quote::before {
 .title-heading-justify h2 {
   font-size: 30px !important;
 }
+
+
+.accuracy-flex{
+  display: flex;
+  justify-content: space-between;
+}
+
+#unans-qsn{
+margin-top:30px;
+
+}
+
+#ans-qsn{
+  margin-top:30px;
+  
+  }
+
+.row.unans_list .card{
+  border-radius: 10px !important;
+  box-shadow: 2px 7px 9px -3px rgb(0 0 0 / 39%);
+}
+
+.row.ans_list .card{
+  border-radius: 10px !important;
+  box-shadow: 2px 7px 9px -3px rgb(0 0 0 / 39%);
+}
