--- a/templates/email-qna-validator.html
+++ b/templates/email-qna-validator.html
@@ -6,13 +6,13 @@
 
 {% block body_block %}
 <section class="contact-form-wrap section">
-    <div class="pie_chart_area">
+<!--     <div class="pie_chart_area">
         <canvas id="pieChart"></canvas>
-    </div>
+    </div> -->
     <div class="container-fluid" >
         <div class="row p-5">
             <div class="col-lg-12 col-md-12 col-sm-12 title-heading-justify">
-                <h2 class="mb-4 heading-align">InfoBeans : Spam Detection Tool for
+                <h2 class="mb-4 heading-align">InfoBeans : Email QnA Validator
                 </h2>
                 <h2>Emails!</h2>
             </div>
@@ -23,7 +23,7 @@
                  <!-- form message -->
 
                     <!-- end message -->
-                    <h5 class="">Write Your Text Here                  </h5>
+                    <h5 class="">Email</h5>
                     <div class="form-group-2 mb-4">
                         <textarea id="msgarea" name="message" class="form-control" rows="10" placeholder="Type Anything...">{% if message %}{{message}}{% endif %} </textarea>
                     </div>
@@ -32,9 +32,9 @@
             <div class="col-lg-12 col-md-12 col-sm-12">
                 <!-- form message -->
                    <!-- end message -->
-                   <h5 class="">Answer</h5>
+                   <h5 class="">Reply</h5>
                    <div class="form-group-2 mb-4">
-                       <textarea disabled id="msgarea2" name="message_output" class="form-control" rows="10" placeholder="">{% if result %}{{result}}{% endif %}</textarea>
+                       <textarea id="msgarea2" name="message_output" class="form-control" rows="10" placeholder="">{% if result %}{{result}}{% endif %}</textarea>
                    </div>
                     <div class="loading-area">
                         <button class="blue buttn" id="submit_query" name="submit" type="button" onclick="submit_form()">Submit</button>
@@ -45,16 +45,35 @@
                     </div>
            </div>
             </div>
-             <div class="col-lg-6 col-xl-6 col-md-12 col-sm-12 p-4">
-                 <div class="row">
-                     <div class="col-lg-12">
-                         <h3>All Suggestions</h3>
+             <div class="col-lg-6 col-xl-6 col-md-12 col-sm-12 p-4 d-none" id="block-feed">
+                 <div class="row ">
+                     <div class="col-lg-12 accuracy-flex">
+                         <h3>Asked Questions</h3>
+                         <h3 id="ans-accuracy"></h3>
                      </div>
                  </div>
 
                  <div class="row suggestion_list">
 
                  </div>
+
+                 <div class="row" id="unans-qsn">
+                    <div class="col-lg-12 accuracy-flex">
+                        <h3>Unanswered Questions</h3>
+                    </div>
+                </div>
+                <div class="row unans_list">
+
+                </div>
+
+                <div class="row" id="ans-qsn">
+                    <div class="col-lg-12 accuracy-flex">
+                        <h3>Answered Questions</h3>
+                    </div>
+                </div>
+                <div class="row ans_list">
+
+                </div>
              </div>
         </div>
     </div>
@@ -74,23 +93,29 @@
     }
 
     function submit_form(){
-        let message = $('#msgarea').text();
-        let output = $('#msgarea2');
-
+        // let input_email_text = $('#msgarea').text();
+        // let input_reply_text = $('#msgarea2');
+        // Create an object to hold the data you want to send to the API
+        let input_email_text = $('#msgarea').val();
+        let input_reply_text = $('#msgarea2').val();
+        let requestData = {
+            emailto_content: input_email_text, // Assuming input1 contains the email content
+            email_reply: input_reply_text // Assuming input2 contains additional data
+        };
         $.ajax({
             url: '/api/spam-ham-email-detection',
-            type: 'post',
-            beforeSend:function (request){
+            type: 'POST',
+            data: JSON.stringify(requestData), // Send the data as JSON
+            contentType: 'application/json', // Set the content type to JSON
+            beforeSend: function (request) {
                 $('#loading-icon').toggleClass('active');
             },
-            success: function (response){
-                $(output).text(response.result);
+            success: function (response) {
+                $('#block-feed').removeClass('d-none');
                 $('#loading-icon').toggleClass('active');
-                let pie_chart = response.pie_chart;
-                $('.pie_chart_area').html(pie_chart);
-                if (response.suggestion_list.length > 0){
+                if (response.detected_questions.length > 0) {
                     let html = ''
-                    $.each(response.suggestion_list,function (key,item){
+                    $.each(response.detected_questions, function (key, item) {
                         html += '<div class="col-lg-12 mt-4">' +
                             '<div class="card p-4 rounded">' +
                             item +
@@ -98,8 +123,40 @@
                             '</div>';
                     });
                     $('.suggestion_list').html(html);
+                    $('#ans-accuracy').html('Overall Accuracy: ' + response.accuracy + '%').css('color', 'green');
                 }
-                OnSuccess_(response.chart_data);
+                if (response.unanswered_qsn.length > 0) {
+                let html1 = ''
+                console.log(response.unanswered_qsn)
+                $.each(response.unanswered_qsn, function (key1, item1) {
+                        html1 += '<div class="col-lg-12 mt-4">' +
+                            '<div class="card p-4 rounded">' +
+                            item1 +
+                            '</div>' +
+                            '</div>';
+                    });
+                    $('.unans_list').html(html1);
+                }else{
+                   // $('#unans-qsn').html().css('display:none')
+                    $('#unans-qsn').addClass('d-none');
+                }
+                if (response.answered_qsn.length > 0) {
+                let html2 = ''
+                console.log(response.answered_qsn)
+                $.each(response.answered_qsn, function (key2, item2) {
+                        html2 += '<div class="col-lg-12 mt-4">' +
+                            '<div class="card p-4 rounded">' +
+                            item2 +
+                            '</div>' +
+                            '</div>';
+                    });
+                    $('.ans_list').html(html2);
+                }else{
+                   // $('#unans-qsn').html().css('display:none')
+                    $('#ans-qsn').addClass('d-none');
+                }
+               
+                
             }
         })
     }
