--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,4 @@
-{% extends 'layouts/base.html' %} {% block page_title %} Investor ChatBots {%
+{% extends 'layouts/base.html' %} {% block page_title %} AI Tool {%
 endblock %} {% block body_block %}
 
 <!-- contact form start -->
