--- a/templates/auth/admin/login.html
+++ b/templates/auth/admin/login.html
@@ -1,10 +1,10 @@
-{% extends 'layouts/admin/auth/base.html' %}
+{% extends 'layouts/base.html' %}
 
 {% block page_title %} Login {% endblock %}
 
 {% block body_block %}
     <div class="container-xxl">
-      <div class="authentication-wrapper authentication-basic container-p-y">
+      <div class="authentication-basic container-p-y">
         <div class="authentication-inner">
             {% for field, errors in form.errors.items() %}
                 <div class="alert alert-error">
@@ -15,41 +15,25 @@
           <div class="card">
             <div class="card-body">
               <!-- Logo -->
-              <div class="app-brand justify-content-center">
-                <a href="{{ url_for('front.index') }}" class="app-brand-link gap-2">
-                  <span class="app-brand-logo demo">
-                    <img src="{{ url_for('static',filename='public/images/company_logo.jpg') }}" alt="Company Logo">
-                  </span>
-                </a>
-              </div>
-
-              <form id="formAuthentication" class="mb-3" method="POST">
-                {{ form.hidden_tag() }}
-                <div class="mb-3">
-                  <label for="email" class="form-label">Email or Username</label>
-                    {{ form.email(class="form-control",id="email",placeholder="Enter your email or username") }}
-                </div>
-                <div class="mb-3 form-password-toggle">
-                  <div class="d-flex justify-content-between">
-                    <label class="form-label" for="password">Password</label>
+                <div class="mb-3 d-flex justify-content-lg-between justify-content-xl-between justify-content-sm-center justify-content-md-center justify-content-center flex-wrap">
+                   <div class="text-left text_section">
+                        <h1>Sign in to InfoBeans AI Tool</h1>
+                        <p>Kindly sign in using your InfoBeans email ID to explore AI Tool.<br></p>
                   </div>
-                  <div class="input-group input-group-merge">
-                    {{ form.password(id="password",class="form-control",placeholder="xxxxxxxxxxx") }}
-                    <span class="input-group-text cursor-pointer"><i class="bx bx-hide"></i></span>
-                  </div>
-                </div>
-                <div class="mb-3 d-flex justify-content-between">
-                    {{ form.submit(class="btn btn-primary d-grid") }}
-                    <div class="google-btn">
-                    <a href="{{ url_for('google_login') }}">
-                        <div class="google-icon-wrapper">
+                  <div class="mb-3  button_section">
+                      <div class="google_button d-flex justify-content-between align-items-center gap-2" onclick="click_google_login('{{ url_for('google_login') }}')">
+                        <div class="google_icon_wrapper">
                             <img class="google-icon" src="{{ url_for('static',filename="public/images/google_logo.svg") }}"/>
                         </div>
-                        <p class="btn-text"><b>Sign in with google</b></p>
-                    </a>
+                        <div class="button_text">
+                            <strong>Sign in with google</strong>
+                        </div>
+                    </div>
+                    <div class="agent_login mt-2">
+                        <p class="text-black"><strong>I'm an agent —</strong> <a href="{{ url_for('auth.agent_login') }}">Sign in here</a></p>
+                    </div>
+                  </div>
                 </div>
-                </div>
-              </form>
             </div>
           </div>
           <!-- /Register -->
@@ -59,48 +43,62 @@
 {% endblock %}
 
 {% block head_styles %}
+
+
+<!-- Fonts -->
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link
+  href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+  rel="stylesheet"
+/>
+
+<!-- Icons. Uncomment required icon fonts -->
+<link rel="stylesheet" href="{{ url_for('static',filename='admin/assets/vendor/fonts/boxicons.css') }}" />
+
+<!-- Core CSS -->
+<link rel="stylesheet" href="{{ url_for('static',filename='admin/assets/vendor/css/core.css') }}" class="template-customizer-core-css" />
+<link rel="stylesheet" href="{{ url_for('static',filename='admin/assets/vendor/css/theme-default.css') }}" class="template-customizer-theme-css" />
+<link rel="stylesheet" href="{{ url_for('static',filename='admin/assets/css/demo.css') }}" />
+
+<!-- Vendors CSS -->
+<link rel="stylesheet" href="{{ url_for('static',filename='admin/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css') }}" />
+
+<!-- Page CSS -->
+<!-- Page -->
+<link rel="stylesheet" href="{{ url_for('static',filename='admin/assets/vendor/css/pages/page-auth.css') }}" />
+
     <style>
-    .google-btn {
-      width: 184px;
-      height: 42px;
-      background-color: #4285f4;
-      border-radius: 2px;
-      box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.25);
-    }
-    .google-btn .google-icon-wrapper {
-      position: absolute;
-      margin-top: 1px;
-      margin-left: 1px;
-      width: 40px;
-      height: 40px;
-      border-radius: 2px;
-      background-color: #fff;
-    }
-    .google-btn .google-icon {
-      position: absolute;
-      margin-top: 11px;
-      margin-left: 11px;
-      width: 18px;
-      height: 18px;
-    }
-    .google-btn .btn-text {
-      float: right;
-      margin: 11px 11px 0 0;
-      color: #fff;
-      font-size: 14px;
-      letter-spacing: 0.2px;
-      font-family: "Roboto";
-    }
-    .google-btn:hover {
-      box-shadow: 0 0 6px #4285f4;
-    }
-    .google-btn:active {
-      background: #1669F2;
-    }
-    .authentication-wrapper.authentication-basic .authentication-inner:before,
-    .authentication-wrapper.authentication-basic .authentication-inner:after{
-        width: 0 !important;
-        height: 0 !important;
-    }
+        .google_button {
+    max-height: 52px;
+    background: #4285f4;
+    height: 100%;
+    color: #fff;
+    padding: 3px 10px 4px 3px;
+    border-radius: 5px;
+    cursor:pointer;
+}
+
+.google_icon_wrapper {
+    background: #fff;
+    padding: 10px;
+    border-radius: 5px;
+}
+
+.button_text {
+    font-size: 18px;
+}
+
+.button_text strong {
+    font-weight: 800;
+}
     </style>
+{% endblock %}
+
+{% block body_scripts %}
+    <script>
+        function click_google_login(url){
+            location.href = url;
+        }
+    </script>
 {% endblock %}
