--- a/templates/layouts/admin/dashboard/styles.html
+++ b/templates/layouts/admin/dashboard/styles.html
@@ -20,3 +20,4 @@
 
 <!-- Helpers -->
 <script src="{{ url_for('static',filename='admin/assets/vendor/js/helpers.js') }}"></script>
+<link src="{{ url_for('static',filename="admin/assets/css/toastr.min.css") }}" />
