--- a/templates/admin/interview_analyzer/index.html
+++ b/templates/admin/interview_analyzer/index.html
@@ -14,7 +14,10 @@
                             <!-- this is were the previews should be shown. -->
                         <div class="previews"></div>
                         <div class="dz-default dz-message"><button class="dz-button" type="button">Drop files here to upload</button></div>
-                        <input type="text" name="candidate_name" class="form-control" placeholder="Enter Candidate Name" />
+                        <div class="d-flex justify-content-center align-items-center gap-2">
+                            <input type="text" id="candidate_name" name="candidate_name" class="form-control" placeholder="Enter Candidate Name" />
+                            <button class="btn btn-primary" type="button" onclick="upload_video()">Upload</button>
+                        </div>
                         </div>
                     </form>
                 </div>
@@ -26,15 +29,47 @@
 {% block body_scripts %}
     <script src="{{ url_for('static',filename='admin/assets/js/dropzone.min.js') }}"></script>
     <script>
-            $('#upload-form').dropzone({
-                addRemoveLinks: true,
-                acceptedFiles: 'video/*',
-                complete: function(file) {
-                    return false
-                },
-                'url': '{{ url_for('interview_analyzer.interview_video_upload') }}',
-            })
-    </script>
+            {#'url': '{{ url_for('interview_analyzer.interview_video_upload') }}',#}
+{#            $('#upload-form').dropzone({#}
+{#                addRemoveLinks: true,#}
+{#                acceptedFiles: 'video/*',#}
+{#                init: function(){#}
+{#                    alert('test')#}
+
+{#                },#}
+{#            })#}
+
+              let myDropzone = new Dropzone("#upload-form",
+                  {
+                     'url': '{{ url_for('interview_analyzer.interview_video_upload') }}',
+                      paramName: "file", // The name that will be used to transfer the file
+                      maxFilesize: 500, // MB
+                      autoProcessQueue: false,
+                      accept: function(file, done) {
+                        let candidate_name = $('#candidate_name').val();
+                        if (candidate_name == '' || candidate_name == undefined || candidate_name == null) {
+                          done("Please Enter Candidate Name.");
+                          myDropzone.removeFile(file)
+                            toastr['error']('Please Enter Candidate Name.')
+                            alert('Please Enter Candidate Name.')
+                        }
+                        else {
+                            done();
+                        }
+                      },
+                      success:function(file){
+                         myDropzone.removeFile(file)
+                          $('#candidate_name').val('');
+                      },
+                      addRemoveLinks: true,
+                      acceptedFiles: 'video/*',
+                  }
+              );
+
+              function upload_video(){
+                myDropzone.processQueue()
+              }
+            </script>
 {% endblock %}
 
 {% block head_styles %}
