--- a/templates/layouts/admin/dashboard/base.html
+++ b/templates/layouts/admin/dashboard/base.html
@@ -78,6 +78,25 @@
     <!-- / Layout wrapper -->
 
     {% include 'layouts/admin/dashboard/scripts.html' %}
+    <script>
+        toastr.options = {
+              "closeButton": true,
+              "debug": false,
+              "newestOnTop": false,
+              "progressBar": false,
+              "positionClass": "toast-bottom-right",
+              "preventDuplicates": false,
+              "onclick": null,
+              "showDuration": "5000",
+              "hideDuration": "1000",
+              "timeOut": "5000",
+              "extendedTimeOut": "1000",
+              "showEasing": "swing",
+              "hideEasing": "linear",
+              "showMethod": "fadeIn",
+              "hideMethod": "fadeOut"
+        }
+    </script>
     {% block body_scripts %}
     {% endblock %}
   </body>
