--- a/templates/layouts/admin/dashboard/scripts.html
+++ b/templates/layouts/admin/dashboard/scripts.html
@@ -19,3 +19,4 @@
 
 <!-- Place this tag in your head or just before your close body tag. -->
 <script async defer src="https://buttons.github.io/buttons.js"></script>
+<script src="{{ url_for('static',filename="admin/assets/js/toastr.min.js") }}"></script>
