--- a/templates/auth/admin/login.html
+++ b/templates/auth/admin/login.html
@@ -92,6 +92,14 @@
 .button_text strong {
     font-weight: 800;
 }
+
+h1 {
+    color: #373742;
+}
+
+p {
+    color: #676775;
+}
     </style>
 {% endblock %}
 
