--- a/templates/admin/interview_analyzer/candidate_list.html
+++ b/templates/admin/interview_analyzer/candidate_list.html
@@ -13,17 +13,17 @@
                     <td>{{ candidate.user_data().full_name or 'N/A' }}</td>
                     <td>
                         {% if candidate.is_report_generated %}
-                            <span class="badge bg-success">Generated</span>
+                            <span class="badge generated">Generated</span>
                         {% else %}
-                            <span class="badge bg-danger">Not Generated</span>
+                            <span class="badge not_generated">Not Generated</span>
                         {% endif %}
                     </td>
                 <td>
                     {% if candidate.is_report_generated %}
-                        <a href="{{ url_for('interview_analyzer.view_report',id=candidate.id) }}" class="btn btn-info btn-sm">View Report</a>
-                        <a href="{{ candidate.report_url }}" class="btn btn-success btn-sm">Report PDF</a>
+                        <a href="{{ url_for('interview_analyzer.view_report',id=candidate.id) }}" class="btn btn-theme-white btn-sm">View Report</a>
+                        <a href="{{ candidate.report_url }}" class="btn btn-theme-white btn-sm">Report PDF</a>
                     {% else %}
-                        <a href="{{ url_for('interview_analyzer.generate_report_command') }}?candidate={{ candidate.id }}" class="btn btn-info btn-sm">Generate Report</a>
+                        <a href="{{ url_for('interview_analyzer.generate_report_command') }}?candidate={{ candidate.id }}" class="btn btn-theme-white btn-sm">Generate Report</a>
                     {% endif %}
                 </td>
                 </tr>
