--- a/templates/admin/interview_analyzer/index.html
+++ b/templates/admin/interview_analyzer/index.html
@@ -16,7 +16,7 @@
                         <div class="dz-default dz-message"><button class="dz-button" type="button">Drop files here to upload</button></div>
                         <div class="d-flex justify-content-center align-items-center gap-2">
                             <input type="text" id="candidate_name" name="candidate_name" class="form-control" placeholder="Enter Candidate Name" />
-                            <button class="btn btn-primary" type="button" onclick="upload_video()">Upload</button>
+                            <button class="btn btn-theme-white" type="button" onclick="upload_video()">Upload</button>
                         </div>
                         </div>
                     </form>
@@ -112,7 +112,7 @@
     <style>
     .dropzone {
         min-height: 250px;
-        border: 3px dashed #00dcff;
+        border: 3px dashed #373742;
         border-radius: 5px;
         padding: 20px 20px;
 
@@ -122,8 +122,13 @@
     }
 
     .dropzone .dz-message .dz-button {
-        color: #00dcff;
+        color: #373742;
         font-size: 20px;
+    }
+
+    .table thead th{
+        background-color: #373450;
+        color: #FFFFFF !important;
     }
     </style>
 {% endblock %}
