--- a/templates/admin/interview_analyzer/view_report.html
+++ b/templates/admin/interview_analyzer/view_report.html
@@ -1,70 +1,109 @@
-{% extends 'layouts/admin/dashboard/base.html' %}
+{% extends 'layouts/admin/dashboard/base.html' %} {% block page_title %} Smart
+Interview Assessment {% endblock %} {% block page_body_title %} Report | Smart
+Interview Assessment {% endblock %} {% block body_block %}
+<div class="row">
+  <div class="col-xl-12">
+    <div class="card">
+      <div class="card-header">
+        <h4>Report</h4>
+      </div>
+      <div class="card-body">
+        <h5>Candidate Name : {{ candidate.name }}</h5>
+        <div class="col-md mb-4 mb-md-0">
+          <small class="text-light fw-semibold">Question Analysis</small>
+          <div class="accordion mt-3" id="accordionExample">
+            <div class="card accordion-item">
+              <h2 class="accordion-header" id="headingOne">
+                <button
+                  type="button"
+                  class="accordion-button collapsed"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#accordionOne"
+                  aria-expanded="false"
+                  aria-controls="accordionOne"
+                >
+                  Question 1
+                </button>
+              </h2>
 
-{% block page_title %} Interview Analyzer {% endblock %}
-
-{% block page_body_title %} Report | Interview Analyzer {% endblock %}
-
-{% block body_block %}
-    <div class="row">
-        <div class="col-xl-12">
-            <div class="card">
-                <div class="card-header">
-                    <h4>Report</h4>
+              <div
+                id="accordionOne"
+                class="accordion-collapse collapse"
+                data-bs-parent="#accordionExample"
+                style=""
+              >
+                <div class="accordion-body">
+                  Lemon drops chocolate cake gummies carrot cake chupa chups
+                  muffin topping. Sesame snaps icing marzipan gummi bears
+                  macaroon dragée danish caramels powder. Bear claw dragée
+                  pastry topping soufflé. Wafer gummi bears marshmallow pastry
+                  pie.
                 </div>
-                <div class="card-body">
-                    <h5>Candidate Name : {{ candidate.name }}</h5>
-                    <div class="col-md mb-4 mb-md-0">
-                  <small class="text-light fw-semibold">Question Analysis</small>
-                  <div class="accordion mt-3" id="accordionExample">
-                    <div class="card accordion-item">
-                      <h2 class="accordion-header" id="headingOne">
-                        <button type="button" class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#accordionOne" aria-expanded="false" aria-controls="accordionOne">
-                          Question 1
-                        </button>
-                      </h2>
-
-                      <div id="accordionOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample" style="">
-                        <div class="accordion-body">
-                          Lemon drops chocolate cake gummies carrot cake chupa chups muffin topping. Sesame snaps icing
-                          marzipan gummi bears macaroon dragée danish caramels powder. Bear claw dragée pastry topping
-                          soufflé. Wafer gummi bears marshmallow pastry pie.
-                        </div>
-                      </div>
-                    </div>
-                    <div class="card accordion-item">
-                      <h2 class="accordion-header" id="headingTwo">
-                        <button type="button" class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#accordionTwo" aria-expanded="false" aria-controls="accordionTwo">
-                         Question 2
-                        </button>
-                      </h2>
-                      <div id="accordionTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample" style="">
-                        <div class="accordion-body">
-                          Dessert ice cream donut oat cake jelly-o pie sugar plum cheesecake. Bear claw dragée oat cake
-                          dragée ice cream halvah tootsie roll. Danish cake oat cake pie macaroon tart donut gummies.
-                          Jelly beans candy canes carrot cake. Fruitcake chocolate chupa chups.
-                        </div>
-                      </div>
-                    </div>
-                    <div class="card accordion-item">
-                      <h2 class="accordion-header" id="headingThree">
-                        <button type="button" class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#accordionThree" aria-expanded="false" aria-controls="accordionThree">
-                          Question 3
-                        </button>
-                      </h2>
-                      <div id="accordionThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample" style="">
-                        <div class="accordion-body">
-                          Oat cake toffee chocolate bar jujubes. Marshmallow brownie lemon drops cheesecake. Bonbon
-                          gingerbread marshmallow sweet jelly beans muffin. Sweet roll bear claw candy canes oat cake
-                          dragée caramels. Ice cream wafer danish cookie caramels muffin.
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                </div>
+              </div>
             </div>
+            <div class="card accordion-item">
+              <h2 class="accordion-header" id="headingTwo">
+                <button
+                  type="button"
+                  class="accordion-button collapsed"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#accordionTwo"
+                  aria-expanded="false"
+                  aria-controls="accordionTwo"
+                >
+                  Question 2
+                </button>
+              </h2>
+              <div
+                id="accordionTwo"
+                class="accordion-collapse collapse"
+                aria-labelledby="headingTwo"
+                data-bs-parent="#accordionExample"
+                style=""
+              >
+                <div class="accordion-body">
+                  Dessert ice cream donut oat cake jelly-o pie sugar plum
+                  cheesecake. Bear claw dragée oat cake dragée ice cream halvah
+                  tootsie roll. Danish cake oat cake pie macaroon tart donut
+                  gummies. Jelly beans candy canes carrot cake. Fruitcake
+                  chocolate chupa chups.
+                </div>
+              </div>
+            </div>
+            <div class="card accordion-item">
+              <h2 class="accordion-header" id="headingThree">
+                <button
+                  type="button"
+                  class="accordion-button collapsed"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#accordionThree"
+                  aria-expanded="false"
+                  aria-controls="accordionThree"
+                >
+                  Question 3
+                </button>
+              </h2>
+              <div
+                id="accordionThree"
+                class="accordion-collapse collapse"
+                aria-labelledby="headingThree"
+                data-bs-parent="#accordionExample"
+                style=""
+              >
+                <div class="accordion-body">
+                  Oat cake toffee chocolate bar jujubes. Marshmallow brownie
+                  lemon drops cheesecake. Bonbon gingerbread marshmallow sweet
+                  jelly beans muffin. Sweet roll bear claw candy canes oat cake
+                  dragée caramels. Ice cream wafer danish cookie caramels
+                  muffin.
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
+  </div>
+</div>
 
 {% endblock %}
-
