--- a/templates/admin/interview_analyzer/candidate_list.html
+++ b/templates/admin/interview_analyzer/candidate_list.html
@@ -1,37 +1,45 @@
 <table class="table table-responsive table-bordered" id="candidate_list">
-    <thead>
-        <th>Name</th>
-        <th>Added By</th>
-        <th>Report Generated</th>
-        <th>Action</th>
-    </thead>
-    <tbody>
-        {% if candidates %}
-            {% for candidate in candidates %}
-                <tr>
-                    <td>{{ candidate.name or 'N/A' }}</td>
-                    <td>{{ candidate.user_data().full_name or 'N/A' }}</td>
-                    <td>
-                        {% if candidate.is_report_generated %}
-                            <span class="badge bg-success">Generated</span>
-                        {% else %}
-                            <span class="badge bg-danger">Not Generated</span>
-                        {% endif %}
-                    </td>
-                <td>
-                    {% if candidate.is_report_generated %}
-                        <a href="{{ url_for('interview_analyzer.view_report',id=candidate.id) }}" class="btn btn-info btn-sm">View Report</a>
-                        <a href="{{ candidate.report_url }}" class="btn btn-success btn-sm">Report PDF</a>
-                    {% else %}
-                        <a href="{{ url_for('interview_analyzer.generate_report_command') }}?candidate={{ candidate.id }}" class="btn btn-info btn-sm">Generate Report</a>
-                    {% endif %}
-                </td>
-                </tr>
-            {% endfor %}
+  <thead>
+    <th>Name</th>
+    <th>Added By</th>
+    <th>Report Generated</th>
+    <th>Action</th>
+  </thead>
+  <tbody>
+    {% if candidates %} {% for candidate in candidates %}
+    <tr>
+      <td>{{ candidate.name or 'N/A' }}</td>
+      <td>{{ candidate.user_data().full_name or 'N/A' }}</td>
+      <td>
+        {% if candidate.is_report_generated %}
+        <span class="badge bg-success">Generated</span>
         {% else %}
-            <tr>
-                <td colspan="4">No Candidates Found.</td>
-            </tr>
+        <span class="badge bg-danger">Not Generated</span>
         {% endif %}
-    </tbody>
+      </td>
+      <td>
+        {% if candidate.is_report_generated %}
+        <a
+          href="{{ url_for('interview_analyzer.view_report',id=candidate.id) }}"
+          class="btn btn-info btn-sm"
+          >View Report</a
+        >
+        <a href="{{ candidate.report_url }}" class="btn btn-success btn-sm"
+          >Report PDF</a
+        >
+        {% else %}
+        <a
+          href="{{ url_for('interview_analyzer.generate_report_command') }}?candidate={{ candidate.id }}"
+          class="btn btn-info btn-sm"
+          >Generate Report</a
+        >
+        {% endif %}
+      </td>
+    </tr>
+    {% endfor %} {% else %}
+    <tr>
+      <td colspan="4">No Candidates Found.</td>
+    </tr>
+    {% endif %}
+  </tbody>
 </table>
