Code changes in PDF file

--- a/templates/admin/interview_analyzer/report.html
+++ b/templates/admin/interview_analyzer/report.html
@@ -257,7 +257,7 @@
         </div>
       </div>
       <div class="question-wrapper mt-3">
-        <h3 class="font-weight-bold text-dark"><i class="fa fa-check-circle" aria-hidden="true" style="color:#AA142D"></i> Answer: This is demo answer.</h3>
+        <h3 class="font-weight-bold text-dark"><i class="fa fa-check-circle" aria-hidden="true" style="color:#228B22"></i> Answer: This is demo answer.</h3>
       </div>
       <div class="hr-theme-ib">
         <div class="hr-line"></div>
